// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ForgotPassword /> When the reset request has not been sent Should render the form 1`] = `
<div
  className="auth"
>
  <div
    className="auth-box"
  >
    <div
      className="auth-logo"
    />
    <div
      className="auth-form"
    >
      <form
        onSubmit={false}
      >
        <div
          className="auth-error"
        />
        <div
          className="auth-help"
        >
          <h1
            className="Heading Heading--large"
          >
            Let’s get your account back
          </h1>
          <p
            className="Paragraph Paragraph--normal"
          >
            Enter your email address and we’ll send you a link to reset your password.
          </p>
        </div>
        <div
          className="auth-field"
        >
          <input
            className="auth-input"
            onChange={[Function]}
            type="text"
            value=""
          />
          <label
            className="auth-label"
          >
            Email Address
          </label>
        </div>
        <div
          className="auth-button-group"
        >
          <button
            className="FormButton FormButton--disabled"
            disabled={true}
            type="submit"
          >
            <span
              className="FormButton__state FormButton__state--inactive"
            />
            <span
              className="FormButton__label"
            >
              Send Password Link
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<ForgotPassword /> When the reset request is submitted sucesfully Should render a success message 1`] = `
<div
  className="auth"
>
  <div
    className="auth-box"
  >
    <div
      className="auth-logo"
    />
    <div
      className="auth-form"
    >
      <div
        className="auth-confirm"
      >
        <h1
          className="Heading Heading--large"
        >
          Thank you.
        </h1>
        <p
          className="Paragraph Paragraph--normal"
        >
          If that email address matches an exisiting account you will recieve a password reset link.
        </p>
        <div
          className="auth-button-group"
        >
          <button
            className="FormButton"
            onClick={[Function]}
            type="button"
          >
            <span
              className="FormButton__state FormButton__state--inactive"
            />
            <span
              className="FormButton__label"
            >
              Login
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ForgotPassword /> When there is a server error Should display a friendly error message 1`] = `
<div
  className="auth"
>
  <div
    className="auth-box"
  >
    <div
      className="auth-logo"
    />
    <div
      className="auth-form"
    >
      <form
        onSubmit={false}
      >
        <div
          className="auth-error"
        >
          <div
            className="FlashMessage"
          >
            <div
              className="FlashMessage__body FlashMessage__body--info"
            >
              There was a problem sending the request. Please try again in a few minutes.
            </div>
          </div>
        </div>
        <div
          className="auth-help"
        >
          <h1
            className="Heading Heading--large"
          >
            Let’s get your account back
          </h1>
          <p
            className="Paragraph Paragraph--normal"
          >
            Enter your email address and we’ll send you a link to reset your password.
          </p>
        </div>
        <div
          className="auth-field"
        >
          <input
            className="auth-input"
            onChange={[Function]}
            type="text"
            value=""
          />
          <label
            className="auth-label"
          >
            Email Address
          </label>
        </div>
        <div
          className="auth-button-group"
        >
          <button
            className="FormButton FormButton--disabled"
            disabled={true}
            type="submit"
          >
            <span
              className="FormButton__state FormButton__state--inactive"
            />
            <span
              className="FormButton__label"
            >
              Send Password Link
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
